payment subscriptions and mariadb

--- a/.env.example
+++ b/.env.example
@@ -63,7 +63,5 @@ STRIPE_SECRET=
 STRIPE_WEBHOOK_SECRET=
 STRIPE_REFRESH_URL=
 STRIPE_RETURN_URL=
+STRIPE_CURRENCY=
 STRIPE_TEST_CLOCK_ID=
-
-OPENAI_API_KEY=
-OPENAI_REQUEST_TIMEOUT=
