--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -5,13 +5,13 @@ info:
   description: "Concretizza API"
 servers:
   - url: http://localhost:8000/api
-security:
-  - bearerAuth: []
 paths:
   /register:
     $ref: "./paths/register.yaml"
   /login:
     $ref: "./paths/login.yaml"
+  /logout:
+    $ref: "./paths/logout.yaml"
   /recover:
     $ref: "./paths/recover.yaml"
   /reset:
