--- a/docs/concretizza.yaml
+++ b/docs/concretizza.yaml
@@ -5,8 +5,6 @@ info:
   description: Concretizza API
 servers:
   - url: 'http://localhost:8000/api'
-security:
-  - bearerAuth: []
 paths:
   /register:
     post:
@@ -41,6 +39,23 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Login'
+      responses:
+        '201':
+          description: Success
+        '400':
+          description: Bad request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+  /logout:
+    delete:
+      summary: Logout
+      operationId: logout
+      tags:
+        - Auth
+      security:
+        - bearerAuth: []
       responses:
         '201':
           description: Success
@@ -144,6 +159,8 @@ paths:
       operationId: listUser
       tags:
         - Users
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Success
@@ -178,6 +195,8 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/User'
+      security:
+        - bearerAuth: []
       responses:
         '201':
           description: Success
@@ -206,6 +225,8 @@ paths:
           schema:
             type: integer
             format: int64
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Success
@@ -236,6 +257,8 @@ paths:
           schema:
             type: integer
             format: int64
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Success
@@ -271,6 +294,8 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/User'
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Success
@@ -300,6 +325,8 @@ paths:
           schema:
             type: integer
             format: int64
+      security:
+        - bearerAuth: []
       responses:
         '204':
           description: No content
@@ -322,6 +349,8 @@ paths:
           schema:
             type: integer
             format: int64
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Success
@@ -357,6 +386,8 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Account'
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Success
@@ -386,6 +417,8 @@ paths:
           schema:
             type: integer
             format: int64
+      security:
+        - bearerAuth: []
       responses:
         '204':
           description: No content
