--- a/docs/paths/user.yaml
+++ b/docs/paths/user.yaml
@@ -10,6 +10,8 @@ get:
       schema:
         type: integer
         format: int64
+  security:
+    - bearerAuth: [] 
   responses:
     "200":
       description: Success
@@ -45,6 +47,8 @@ put:
       application/json:
         schema:
           $ref: "../components/schemas/user.yaml"
+  security:
+    - bearerAuth: [] 
   responses:
     "200":
       description: Success
@@ -74,6 +78,8 @@ delete:
       schema:
         type: integer
         format: int64
+  security:
+    - bearerAuth: [] 
   responses:
     "204":
       description: No content
