docs cleanup with latest schema

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -5,4 +5,5 @@ build:
 
 run:
 	@echo "\033[0;32mRunning at http://localhost:9200\033[0m"
-	docker run -p 9200:8080 -v $(shell pwd)/concretizza.yaml:/usr/share/nginx/html/swagger/concretizza.yaml -e SWAGGER_JSON=/usr/share/nginx/html/swagger/concretizza.yaml swaggerapi/swagger-ui
+	docker ps -a -q --filter "name=concretizza-accounts" | xargs -r docker rm || true
+	docker run --name concretizza-accounts -p 9200:8080 -v $(shell pwd)/concretizza.yaml:/usr/share/nginx/html/swagger/concretizza.yaml -e SWAGGER_JSON=/usr/share/nginx/html/swagger/concretizza.yaml swaggerapi/swagger-ui
