--- a/docs/concretizza.yaml
+++ b/docs/concretizza.yaml
@@ -673,6 +673,9 @@ components:
     Register:
       type: object
       properties:
+        name:
+          type: string
+          description: Name of the user.
         email:
           type: string
           format: email
@@ -682,15 +685,10 @@ components:
           format: password
           nullable: true
           description: Password for the user.
-        password_confirmation:
-          type: string
-          format: password
-          nullable: true
-          description: Password confirmation for the user.
       required:
+        - name
         - email
         - password
-        - password_confirmation
     Recover:
       type: object
       properties:
