--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_CLIENT_URL=http://localhost:3000
+APP_SECURITY_PRIVATE_KEY=
+APP_SECURITY_PUBLIC_KEY=
+APP_SECURITY_TOKEN_EXPIRATION=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
