--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "predis/predis": "^2.2",
         "stripe/stripe-php": "^10.15"
     },
     "require-dev": {
